@@ -16,6 +16,8 @@
 
 package com.jayway.restassured.response;
 
+import java.io.InputStream;
+
 public interface ResponseBody {
     /**
      * Print the response body and return it as string. Mainly useful for debug purposes when writing tests.
@@ -25,16 +27,23 @@ public interface ResponseBody {
     String print();
 
     /**
-     * Get the body as a string. You can only do this if you've not used REST Assured response expectations.
+     * Get the body as a string.
      *
      * @return The body as a string.
      */
     String asString();
 
     /**
-     * Get the body as a byte array. You can only do this if you've not used REST Assured response expectations.
+     * Get the body as a byte array.
      *
      * @return The body as a array.
      */
     byte[] asByteArray();
+
+    /**
+     * Get the body as an input stream.
+     *
+     * @return The body as an input stream.
+     */
+    InputStream asInputStream();
 }
